
* 0.1.3 - <UNRELEASED>

** New feature: GridFS support.
This version introduces a set of GridFS APIs, to ease working with
GridFS, be that involve retrieving files chunk by chunk, listing and
removing files, or offering a file-like streaming API.

** New function: mongo_sync_cmd_create()
A new helper function was introduced to aid us in creating capped and
pre-allocated collections.

** New index options: background & sparse.
It is now possible to create sparse indexes, and create them in the
background, using two new option flags: MONGO_INDEX_BACKGROUND and
MONGO_INDEX_SPARSE.

* 0.1.2 - <2011-07-01 Fri>

** Bugfix: mongo_packet_recv() waits for all data.
Previously, mongo_packet_recv() did not wait for all data to arrive,
and returned whatever already arrived at the time of reading.

This has been corrected, mongo_packet_recv() correctly blocks now.

** Implemented support for passive secondaries.
Support was added for passive secondaries, they're now automatically
discovered too.

** New feature: Index handling functions
Implemented some helper functions to create and delete indexes.

** New function: bson_cursor_find()
Combining the powers of bson_find() and bson_cursor_find_next(), this
new function can find a key anywhere in a BSON object, yet, maintains
the ability to continue a previous scan.

** New function: mongo_connection_set_timeout()
On systems that support it (most modern systems should), sets a
timeout for send and receive operations. Setting the timeout to zero
clears the timeout, and these calls will block forever.

The timeout is not preserved accross reconnects, if using the Sync
API, however.

** Removed dependency on OpenSSL
Instead of using OpenSSL's MD5 functions, use the checksum
capabilities of glib 2.16 and newer. This halves the dependencies of
the library!

* 0.1.1 - <2011-06-16 Thu>

** Cursor-based query iterator API
The new cursor-based query iterator API makes it possible to grab the