@@ -24,4 +24,5 @@ LMC_0.1.2 {
 LMC_0.1.3 {
  mongo_sync_gridfs_*;
  mongo_sync_cmd_create;
+ mongo_sync_cmd_exists;
 } LMC_0.1.2;
