@@ -1079,6 +1079,75 @@ mongo_sync_cmd_create (mongo_sync_connection *conn,
   return TRUE;
 }
 
+bson *
+mongo_sync_cmd_exists (mongo_sync_connection *conn,
+		       const gchar *db, const gchar *coll)
+{
+  bson *cmd, *r;
+  mongo_packet *p;
+  gchar *ns, *sys;
+  gint32 rid;
+
+  if (!conn)
+    {
+      errno = ENOTCONN;
+      return NULL;
+    }
+  if (!db || !coll)
+    {
+      errno = EINVAL;
+      return NULL;
+    }
+
+  rid = mongo_connection_get_requestid ((mongo_connection *)conn) + 1;
+
+  ns = g_strconcat (db, ".", coll, NULL);
+  cmd = bson_new_sized (128);
+  bson_append_string (cmd, "name", ns, -1);
+  bson_finish (cmd);
+  g_free (ns);
+
+  sys = g_strconcat (db, ".system.namespaces", NULL);
+
+  p = mongo_wire_cmd_query (rid, sys, _SLAVE_FLAG (conn), 0, 1, cmd, NULL);
+  if (!p)
+    {
+      int e = errno;
+
+      bson_free (cmd);
+      g_free (sys);
+
+      errno = e;
+      return NULL;
+    }
+  g_free (sys);
+  bson_free (cmd);
+
+  if (!_mongo_sync_packet_send (conn, p, !conn->slaveok, TRUE))
+    return NULL;
+
+  p = _mongo_sync_packet_recv (conn, rid, MONGO_REPLY_FLAG_QUERY_FAIL);
+  if (!p)
+    return NULL;
+
+  p = _mongo_sync_packet_check_error (conn, p, FALSE);
+  if (!p)
+    return NULL;
+
+  if (!mongo_wire_reply_packet_get_nth_document (p, 1, &r))
+    {
+      int e = errno;
+
+      mongo_wire_packet_free (p);
+      errno = e;
+      return NULL;
+    }
+  mongo_wire_packet_free (p);
+  bson_finish (r);
+
+  return r;
+}
+
 gboolean
 mongo_sync_cmd_drop (mongo_sync_connection *conn,
 		     const gchar *db, const gchar *coll)
